<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rozsa-ExpenseTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_claims_text">List of Claims:</string>
    <string name="add_claim_text">Add A Claim</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="list_of_expenses_text">List of Expenses:</string>
    <string name="add_expense_text">Add an Expense</string>
    <string name="title_activity_claim_edit">ClaimEditActivity</string>
    <string name="title_activity_expense_edit">ExpenseEditActivity</string>
    <string name="name_claim_text">Name of Claim:</string>
    <string name="start_date_text">Start Date:</string>
    <string name="end_date_text">End Date:</string>
    <string name="description_text">Description:</string>
    <string name="date_hint">yyyy-MM-dd</string>
    <string name="claim_name_hint">Claim Name</string>
    <string name="description_hint">Additional Information</string>
    <string name="delete_claim_text">Delete Claim</string>
    <string name="save_claim_text">Save Claim</string>

    <string-array name="currency_array">
        <item>CAD</item>
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
    </string-array>

    <string name="expense_name_text">Expense Name:</string>
    <string name="expense_name_hint">Expense Name</string>
    <string name="expense_category_text">Category:</string>
    <string name="category_name_hint">Category Name</string>
    <string name="expense_date_text">Date:</string>
    <string name="currency_hint">$$$</string>
    <string name="currency_amount_text">Amount:</string>
    <string name="currency_type_text">Type</string>
    <string name="title_activity_new_claim">NewClaimActivity</string>
    <string name="title_activity_new_expense">NewExpenseActivity</string>
    <string name="name_expense_text">Name of Expense:</string>
    <string name="expense_type_text">Type of Expense:</string>
    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="title_activity_claim_view">ClaimViewActivity</string>
    <string name="claim_status_text">Status:</string>
    <string name="curr_cad">CAD</string>
    <string name="curr_usd">USD</string>
    <string name="curr_eur">EUR</string>
    <string name="curr_gbp">GBP</string>
    <string name="delete_expense_text">Delete Expense</string>
    <string name="save_expense_text">Save Expense</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="claim_view_menu">Claim View</string>

</resources>