<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClaimEditActivity" >

    <TextView
        android:id="@+id/nameofExpenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name_expense_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expenseNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameofExpenseText"
        android:layout_below="@+id/nameofExpenseText"
        android:ems="10"
        android:hint="@string/expense_name_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/expenseDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDateText"
        android:layout_below="@+id/expenseDateText"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date" />

    <EditText
        android:id="@+id/expenseDescriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDescriptionText"
        android:layout_below="@+id/expenseDescriptionText"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/deleteExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveExpenseButton"
        android:layout_alignBottom="@+id/saveExpenseButton"
        android:layout_alignLeft="@+id/expenseDescriptionInput"
        android:layout_toLeftOf="@+id/saveExpenseButton"
        android:text="@string/delete_expense_text" />

    <Button
        android:id="@+id/saveExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_expense_text" />

    <EditText
        android:id="@+id/expenseCategoryInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDateText"
        android:layout_below="@+id/expenseCategoryText"
        android:ems="10"
        android:hint="@string/category_name_hint" />

    <TextView
        android:id="@+id/expenseDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseCategoryText"
        android:layout_below="@+id/expenseCategoryInput"
        android:text="@string/expense_date_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/expenseCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseNameInput"
        android:layout_below="@+id/expenseNameInput"
        android:layout_marginTop="14dp"
        android:text="@string/expense_category_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/expenseDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDateInput"
        android:layout_below="@+id/expenseDateInput"
        android:layout_marginTop="64dp"
        android:text="@string/description_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/expenseAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseDateInput"
        android:layout_below="@+id/expenseDateInput"
        android:text="@string/currency_amount_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expenseAmountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseAmountText"
        android:layout_alignRight="@+id/nameofExpenseText"
        android:layout_below="@+id/expenseAmountText"
        android:ems="10"
        android:hint="@string/currency_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/expenseTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expenseDateInput"
        android:layout_toRightOf="@+id/expenseAmountInput"
        android:text="@string/currency_type_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/expenseTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/expenseAmountInput"
        android:layout_toRightOf="@+id/expenseAmountInput"
        android:entries="@array/currency_array" />

</RelativeLayout>